# RTR

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
docs/best_practice/train/: download_data.md  lerobot.md  openvla_oft.md  rdp.md
docs/environment/: lerobot.md  openvla_oft.md  rdp.md  rlds_env.md
src/rtr_async_sys/configs/: simple_runner.yaml  simple_runner_without_user.yaml
src/rtr_async_sys/controller/: async_controller.py  fix_threshold_async_controller.py  sync_controller.py
src/rtr_async_sys/core/: controller_base.py  env_base.py  executor_base.py  model_wrapper_base.py  readme.md  runner_base.py  scheduler_base.py  user_base.py
src/rtr_async_sys/env/: dp_dataset_env.py  pickle_dataset_env.py  xarm_env.py
src/rtr_async_sys/executor/: async_nonservo_executor.py  sync_nonservo_executor.py
src/rtr_async_sys/model_wrapper/: dp_model_wrapper.py  interpolate_model_wrapper.py  kinedex_model_wrapper.py  ldp_with_block_vae_model_wrapper.py  openvla_oft_vae_model_wrapper.py  rdp_block_vae_model_wrapper.py  rdp_model_wrapper.py  rdp_model_wrapper_version2.py  rdp_vae_model_wrapper.py  replay_model_wrapper.py  vaeM_act_model_wrapper.py  vae_act_model_wrapper.py  vae_act_stride_scaling_model_wrapper.py  vae_continuousLoss_act_model_wrapper.py  vae_implicit_interpolation_act_model_wrapper.py  vae_unet_model_wrapper.py
src/rtr_async_sys/models/: README.md  _test.py  kinedex.py  rdp.py  vae_act.py
src/rtr_async_sys/runner/: fake_dp_runner.py  simple_runner.py
src/rtr_async_sys/scheduler/: simple_scheduler.py
(+285 files in other folders)
