[project]
name = "rtr_async_sys"
version = "0.0.0"
description = "A Hydra-configurable asynchronous robotics control system with multi-process runtime for RTR."
authors = [
    {name = "Kunyun Wang", email = "wkykaixin@sjtu.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # "torch>=2.1",
    "numpy", # use 1.26.4 if conflicts happen
    "pydantic",
    "pyyaml",
    "opencv-python", # use 4.11.0.86 if conflicts happen
    "pyzmq",
    "transforms3d",
    # "transformers", # use 4.44.0 if conflicts happen
    "loguru"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
